# mealmentor

./: .pre-commit-config.yaml  README.md  data_generator.py  main.py  mealmentrodb  models.py  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
ddl/tables/: users.sql
scripts/: data_generator.py
src/: main.py  mealmentor.db
src/db/: mealmentor_database.py
src/models/: models.py
