[tool.poetry]
name = "mealmentor"
version = "0.1.0"
description = "Step into a world where nutritious meals are at your fingertips! This project tailors weekly menus specifically to your health parameters and eating habits, taking the stress out of meal planning."
authors = ["Bohdan Solianyk <bohdan_solianyk@epam.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
